--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Message Detection</title>
 	<!-- <link rel="stylesheet" type="text/css" href="../static/css/styles.css"> -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
@@ -10,9 +10,9 @@
 	<header>
 		<div class="container">
 		<div id="brandname">
-			Machine Learning App with Flask
+			Machine learning through Flask app
 		</div>
-		<h2>Spam Detector For Email Messages</h2>
+		<h2>Detect Spam or Ham?</h2>
 		
 	</div>
 	</header>
@@ -25,7 +25,7 @@
 		<textarea name="message" rows="6" cols="50"></textarea>
 		<br/>
 
-		<input type="submit" class="btn-info" value="predict">
+		<input type="submit" class="btn-info" value="Predict">
 		
 	</form>
 		
