--- a/templates/result.html
+++ b/templates/result.html
@@ -9,13 +9,13 @@
 	<header>
 		<div class="container">
 		<div id="brandname">
-			ML App
+			ML Application
 		</div>
 		<h2>Spam Detector For SMS Messages</h2>
 		
 	</div>
 	</header>
-	<p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
+	<p style="color:blue;font-size:20;text-align: center;"></p>
 	<div class="results">
 
 
